<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et_num1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="num 1"
        android:inputType="phone"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/et_num2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="num 2"
        android:inputType="phone"
        app:layout_constraintTop_toBottomOf="@id/et_num1"
        tools:ignore="TouchTargetSizeCheck"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="Helper"
        android:layout_margin="16dp"
        android:visibility="gone"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/et_num2"/>


    <Button
        android:id="@+id/btn_plus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="+"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@id/tv_result"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="20dp"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btn_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="-"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@id/btn_plus"
        app:layout_constraintStart_toStartOf="@id/btn_plus"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btn_multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="*"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@id/tv_result"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_margin="20dp"/>

    <Button
        android:id="@+id/btn_division"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="/"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@id/btn_multiply"
        app:layout_constraintEnd_toEndOf="@id/btn_multiply"
        android:layout_marginTop="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>